NIFI-14382: Create processor to list box metadata templates for file