@@ -21,8 +21,6 @@ import com.box.sdk.BoxAPIResponseException;
 import com.box.sdk.BoxFile;
 import com.box.sdk.Metadata;
 import com.eclipsesource.json.JsonValue;
-import org.apache.nifi.json.JsonRecordSetWriter;
-import org.apache.nifi.serialization.RecordSetWriterFactory;
 import org.apache.nifi.util.MockFlowFile;
 import org.apache.nifi.util.TestRunners;
 import org.junit.jupiter.api.BeforeEach;
@@ -69,11 +67,6 @@ public class ListBoxFileMetadataTemplatesTest extends AbstractBoxFileTest {
         };
 
         testRunner = TestRunners.newTestRunner(testSubject);
-
-        final RecordSetWriterFactory recordSetWriter = new JsonRecordSetWriter();
-        testRunner.addControllerService("record_writer", recordSetWriter);
-        testRunner.enableControllerService(recordSetWriter);
-        testRunner.setProperty(ListBoxFileMetadataTemplates.RECORD_WRITER, "record_writer");
         super.setUp();
     }
 
@@ -87,7 +80,6 @@ public class ListBoxFileMetadataTemplatesTest extends AbstractBoxFileTest {
         JsonValue mockJsonValue3 = mock(JsonValue.class);
         JsonValue mockJsonValue4 = mock(JsonValue.class);
 
-        // When asString() is called on these mocks, return appropriate values
         when(mockJsonValue1.asString()).thenReturn("document.pdf");
         when(mockJsonValue2.asString()).thenReturn("pdf");
         when(mockJsonValue3.asString()).thenReturn("Test Document");
@@ -106,12 +98,12 @@ public class ListBoxFileMetadataTemplatesTest extends AbstractBoxFileTest {
         when(mockMetadata2.getID()).thenReturn(TEMPLATE_2_ID);
         when(mockMetadata2.getTemplateName()).thenReturn(TEMPLATE_2_NAME);
         when(mockMetadata2.getScope()).thenReturn(TEMPLATE_2_SCOPE);
+
         List<String> template2Fields = List.of("Test Number", "Title", "Author", "Date");
         when(mockMetadata2.getPropertyPaths()).thenReturn(template2Fields);
         when(mockMetadata2.getValue("Test Number")).thenReturn(null); // Test null handling
         when(mockMetadata2.getValue("Title")).thenReturn(mockJsonValue3);
         when(mockMetadata2.getValue("Author")).thenReturn(mockJsonValue4);
-        when(mockMetadata2.getValue("Date")).thenReturn(null); // Test null handling
         doReturn(metadataList).when(mockBoxFile).getAllMetadata();
 
         testRunner.setProperty(ListBoxFileMetadataTemplates.FILE_ID, TEST_FILE_ID);
@@ -119,15 +111,21 @@ public class ListBoxFileMetadataTemplatesTest extends AbstractBoxFileTest {
         testRunner.run();
         testRunner.assertAllFlowFilesTransferred(ListBoxFileMetadataTemplates.REL_SUCCESS, 1);
 
-        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ListBoxFileMetadataTemplates.REL_SUCCESS).get(0);
+        final MockFlowFile flowFile = testRunner.getFlowFilesForRelationship(ListBoxFileMetadataTemplates.REL_SUCCESS).getFirst();
         flowFile.assertAttributeEquals("box.file.id", TEST_FILE_ID);
         flowFile.assertAttributeEquals("record.count", "2");
         flowFile.assertAttributeEquals("box.metadata.templates.names", "fileMetadata,properties");
         flowFile.assertAttributeEquals("box.metadata.templates.count", "2");
-        flowFile.assertAttributeEquals("box.metadata.templates.scopes", "enterprise,global");
 
         String content = new String(flowFile.toByteArray());
         testRunner.getLogger().info("FlowFile content: {}", content);
+
+        // Check that content contains key elements
+        org.junit.jupiter.api.Assertions.assertTrue(content.contains("\"$id\""));
+        org.junit.jupiter.api.Assertions.assertTrue(content.contains("\"$template\""));
+        org.junit.jupiter.api.Assertions.assertTrue(content.contains("\"$scope\""));
+        org.junit.jupiter.api.Assertions.assertTrue(content.contains("["));
+        org.junit.jupiter.api.Assertions.assertTrue(content.contains("]"));
     }
 
     @Test
